<resources>
    <string name="app_name">Paying Camel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Paying Camel</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_delimiter">Management</string>

    <string name="menu_calendar">Calendar</string>
    <string name="menu_skaters">Skaters</string>
    <string name="menu_overview">Overview</string>
    <string name="menu_paths">Paths</string>
    <string name="menu_expenses">Expenses</string>
    <string name="menu_gas">Gas</string>
    <string name="menu_rates">Hourly Rates</string>
    <string name="menu_delimiter_elements">Elements</string>
    <string name="menu_trips">Trips</string>
    <string name="settings_notifications_title">Enable message notifications</string>
    <string name="settings_feedback_title">Send feedback</string>
    <string name="settings_feedback_summary">Report technical issues or suggest new features</string>
    <string name="course_default_name">Course</string>
    <string name="skater_name_default">%1$s %2$s</string>
    <string name="calendar_toast">Selected date is: %1$d-%2$d-%3$d</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Word not saved because it is empty.</string>
    <string name="new_course_dialog_title">New course</string>
    <string name="hint_skater">Add skater</string>
    <string name="cancelled">Cancelled</string>
    <string name="unknown_result_code">Unknown result code</string>
    <string name="end_before_start">End time should be after start time</string>
    <string name="paid">Paid</string>
    <string name="paid_tooltip">Has the course been paid?</string>
    <string name="hint_rate">Add hourly rate</string>
    <string name="hint_amount">Enter amount</string>
    <string name="new_skater_dialog_title">New skater</string>
    <string name="hint_first_name">Enter first name</string>
    <string name="hint_last_name">Enter last name</string>
    <string name="hint_email">Add an email</string>
    <string name="active">Active</string>
    <string name="active_tooltip">Is the skater active?</string>
    <string name="missing_first_name">First name missing</string>
    <string name="missing_last_name">Last name missing</string>
    <string name="new_rate_dialog_title">New hourly rate</string>
    <string name="new_expense_dialog_title">New expense</string>
    <string name="new_path_dialog_title">New path</string>
    <string name="new_fill_dialog_title">New fill</string>
    <string name="new_trip_dialog_title">New trip</string>
    <string name="hint_title">Add a title</string>
    <string name="hint_note">Add a note</string>
    <string name="empty_amount">Empty amount</string>
    <string name="hint_from">Add origin</string>
    <string name="hint_to">Add destination</string>
    <string name="hint_distance">Enter distance</string>
    <string name="empty_distance">Empty distance</string>
    <string name="hint_path">Add path</string>
    <string name="hint_course">Add a course</string>
    <string name="distance_unit">km</string>
    <string name="label_trip">Trip</string>
    <string name="label_expense">Expense</string>
    <string name="label_fill">Fill</string>
    <string name="label_course">Course</string>
    <string name="action_delete">Delete</string>
    <string name="title_default">%s</string>
    <string name="name_empty">No title</string>
    <string name="settings_backup_title">Backup Database to Files</string>
    <string name="settings_backup_summary">Saves database to files on the device</string>
    <string name="settings_restore_title">Restore Database from Files</string>
    <string name="settings_restore_summary">Restores database from files stored on the device</string>
    <string name="restore_too_few_files">Three files must be selected</string>
    <string name="restore_wrong_files">The three files should be: database, wal, shm.</string>
    <string name="icon_attribution_title">Icon</string>
    <string name="icon_attribution_summary">Icon made by Freepik from www.flaticon.com and Carol Liao from www.toicon.com</string>
    <string name="hint_selected_skaters">All skaters</string>
    <string name="course_amount_description">Income</string>
    <string name="expense_amount_description">Expenses</string>
    <string name="trip_amount_description">Total distance</string>
    <string name="fill_amount_description">Fill expenses</string>
    <string name="description_selection_icon_background">Icon background</string>
    <string name="description_selection_icon_icon">Selection icon state</string>
    <string name="description_selection_icon">Selection icon</string>
    <string name="description_expenses_fab">Add an expense</string>
    <string name="description_gas_fab">Add a fill</string>
    <string name="description_overview_fab">Print overview</string>
    <string name="description_paths_fab">Add a path</string>
    <string name="description_rates_fab">Add a rate</string>
    <string name="description_skaters_fab">Add a skater</string>
    <string name="description_trips_fab">Add a trip</string>
    <string name="should_not_show_up">This should never show up</string>
    <string name="description_skaters_picker_fab">Confirm selection</string>
    <string name="description_courses_fab">Add a course</string>
    <string name="menu_courses">Courses</string>
    <string name="database_backed_up">Database backed up</string>
    <string name="database_restored">Database restored</string>
    <string name="failed_sign_in">Sign in failed with message \"%s\"</string>
    <string name="already_signed_in">User already signed-in</string>
    <string name="signed_out">Signed out</string>
    <string name="failed_sign_out">Sign out failed with message \"%s\"</string>
    <string name="signed_in">User %s signed-in</string>
    <string name="settings_sign_in_title">Sign-in</string>
    <string name="settings_sign_in_summary">Sign-in to a Google account for database backup</string>
    <string name="settings_sign_out_title">Sign-out</string>
    <string name="settings_sign_out_summary">Sign-out of a Google account</string>
    <string name="not_signed_in">No user signed-in</string>
    <string name="no_sign_in_client">No sign-in client</string>
    <string name="settings_backup_drive_title">Backup Database to Cloud</string>
    <string name="settings_backup_drive_summary">Saves database to Google Drive</string>
    <string name="settings_restore_drive_title">Restore Database from Cloud</string>
    <string name="settings_restore_drive_summary">Restores database from files stored on Google Drive</string>
    <string name="no_internet_permission">Need internet permission to access Google Drive</string>
    <string name="no_drive_permission">Need Google Drive permission to access Google Drive</string>
    <string name="skater_full_name">%1$s %2$s</string>
    <string name="distance_format">%1$s %2$s</string>
    <string name="invalid_google_token_id_response">Received an invalid Google ID token response</string>
    <string name="unexpected_type_custom_credential">Unexpected type of custom credential</string>
    <string name="unexpected_type_credential">Unexpected type of credential</string>
    <string name="google_drive_backup_failed">Google Drive backup failed with message: \"%s\"</string>
    <string name="google_drive_restore_failed">Google Drive backup failed with message: \"%s\"</string>
</resources>
