<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:key="notifications"
        app:title="@string/settings_notifications_title"/>

    <Preference
        app:key="sign_in"
        app:title="@string/settings_sign_in_title"
        app:summary="@string/settings_sign_in_summary"/>

    <Preference
        app:key="sign_out"
        app:title="@string/settings_sign_out_title"
        app:summary="@string/settings_sign_out_summary"/>

    <Preference
        app:key="backup_drive"
        app:title="@string/settings_backup_drive_title"
        app:summary="@string/settings_backup_drive_summary"/>

    <Preference
        app:key="restore_drive"
        app:title="@string/settings_restore_drive_title"
        app:summary="@string/settings_restore_drive_summary"/>

    <Preference
        app:key="backup"
        app:title="@string/settings_backup_title"
        app:summary="@string/settings_backup_summary"/>

    <Preference
        app:key="restore"
        app:title="@string/settings_restore_title"
        app:summary="@string/settings_restore_summary"/>

    <Preference
        app:key="icon_attribution"
        app:title="@string/icon_attribution_title"
        app:summary="@string/icon_attribution_summary"/>

</PreferenceScreen>