<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calendar">

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.guillaumetousignant.payingcamel.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/nav_skaters"
        android:name="com.guillaumetousignant.payingcamel.ui.skaters.SkatersFragment"
        android:label="@string/menu_skaters"
        tools:layout="@layout/fragment_skaters" />

    <fragment
        android:id="@+id/nav_overview"
        android:name="com.guillaumetousignant.payingcamel.ui.overview.OverviewFragment"
        android:label="@string/menu_overview"
        tools:layout="@layout/fragment_overview" />

    <fragment
        android:id="@+id/nav_paths"
        android:name="com.guillaumetousignant.payingcamel.ui.paths.PathsFragment"
        android:label="@string/menu_paths"
        tools:layout="@layout/fragment_paths" />

    <fragment
        android:id="@+id/nav_trips"
        android:name="com.guillaumetousignant.payingcamel.ui.trips.TripsFragment"
        android:label="@string/menu_trips"
        tools:layout="@layout/fragment_trips" />

    <fragment
        android:id="@+id/nav_expenses"
        android:name="com.guillaumetousignant.payingcamel.ui.expenses.ExpensesFragment"
        android:label="@string/menu_expenses"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/nav_gas"
        android:name="com.guillaumetousignant.payingcamel.ui.gas.GasFragment"
        android:label="@string/menu_gas"
        tools:layout="@layout/fragment_gas" />

    <fragment
        android:id="@+id/nav_rates"
        android:name="com.guillaumetousignant.payingcamel.ui.rates.RatesFragment"
        android:label="@string/menu_rates"
        tools:layout="@layout/fragment_rates" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.guillaumetousignant.payingcamel.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings"/>
</navigation>