<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewSkaterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/new_skater_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edit_first_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_first_name"
        android:inputType="textPersonName|textAutoComplete|textCapWords"
        android:padding="@dimen/big_padding"
        android:textSize="18sp"
        android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_GIVEN" />

    <EditText
        android:id="@+id/edit_last_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_last_name"
        android:inputType="textPersonName|textAutoComplete|textCapWords"
        android:padding="@dimen/big_padding"
        android:textSize="18sp"
        android:autofillHints=".AUTOFILL_HINT_PERSON_NAME_FAMILY" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:padding="@dimen/big_padding"
        android:textSize="18sp"
        android:autofillHints=".	AUTOFILL_HINT_EMAIL_ADDRESS" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/big_padding">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/active" />

        <CheckBox
            android:id="@+id/active_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:gravity="center_vertical|end"
            android:tooltipText="@string/active_tooltip" />
    </LinearLayout>

    <EditText
        android:id="@+id/edit_skater_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note"
        android:inputType="textLongMessage|textCapSentences|textAutoComplete|textImeMultiLine"
        android:padding="@dimen/big_padding"
        android:autofillHints="text" />

</LinearLayout>