<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPathActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/new_path_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/path_edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_title"
        android:inputType="textCapSentences|textAutoComplete"
        android:padding="@dimen/big_padding"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/path_edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_distance"
        android:inputType="numberDecimal"
        android:padding="@dimen/big_padding" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/path_edit_from"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_from"
            android:inputType="textCapSentences|textAutoComplete"
            android:padding="@dimen/big_padding"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/path_edit_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-light"
            android:hint="@string/hint_to"
            android:inputType="textCapSentences|textAutoComplete"
            android:padding="@dimen/big_padding"
            android:textSize="18sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/path_edit_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note"
        android:inputType="textLongMessage|textCapSentences|textAutoComplete|textImeMultiLine"
        android:padding="@dimen/big_padding" />

</LinearLayout>