<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewRateActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/new_rate_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/edit_rate_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:hint="@string/hint_title"
        android:inputType="textCapSentences|textAutoComplete"
        android:padding="@dimen/big_padding"
        android:textSize="18sp"
        android:autofillHints="text" />

    <EditText
        android:id="@+id/rate_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_amount"
        android:inputType="numberDecimal"
        android:padding="@dimen/big_padding"
        android:autofillHints="money" />

    <TextView
        android:id="@+id/rate_skater_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="false"
        android:hint="@string/hint_skater"
        android:onClick="showSkaterPickerDialog"
        android:padding="@dimen/big_padding" />

    <EditText
        android:id="@+id/edit_rate_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_note"
        android:inputType="textLongMessage|textCapSentences|textAutoComplete|textImeMultiLine"
        android:padding="@dimen/big_padding"
        android:autofillHints="text" />

</LinearLayout>